# ac-workspace-rs

./: .gitignore  Cargo.toml
examples/: 2d-cumsum.rs  2d-imos.rs  binary-search-1.rs  binary-search-2.rs  dijkstra.rs  dsu.rs  segtree.rs
examples/edpc/: Cargo.toml
src/: template.rs
tools/: commands.bash  init.rs  submit.rs
